# teamspeak3-python-api

./: .gitignore  Events.py  README.md  SSHConnWrapper.py  TS3Connection.py  TS3QueryExceptionType.py  __init__.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  socket_wrapper.py  test_TS3Connection.py  utilities.py
.github/workflows/: black-formatter.yml  codeql-analysis.yml  pylint.yml  python-package.yml  python-publish-testpypi.yml
tests/: test_TS3Connection.py  test_utilities.py
