[project]
name = "ts3API"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pylint.MASTER]
ignore-paths = "tests"
fail-under = "9.0"
suggestion-mode = 'yes'

[tool.black]
target-version = ['py311']
include = '\.py$'
