[metadata]
name = ts3API
version = attr: .__version__
author = Fabian Ising, Daniel Lukats
author_email = ts3API@murgi.de, ts3API@aethiles.de
description = Python 3 API that allows interactive access to the TeamSpeak 3 Server Query interface.
long_description = file: README.md
license_file = LICENSE
long_description_content_type = text/markdown
keywords = TeamSpeak, ts3, ts3API, TeamSpeak3
url = https://github.com/Murgeye/teamspeak3-python-api
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent


[options]
packages = ts3API
install_requires =
    blinker ==1.4
package_dir =
    ts3API = .

[options.extras_require]
ssh = paramiko
